# voxtral-audio-ai

./: README.md
simple-example/: .gitignore  README.md  app.py  gitattributes  main.py  pyproject.toml  requirements.txt
